force-app/main/default/objects/Packaging_Trial__c/Packaging_Trial__c.object-meta.xml
<CustomObject>
    <description>This object is to track the packing trials and approvals</description>
    <label>Packaging Trial</label>
    <nameField>
        <displayFormat>Packaging Trial No. {00000}</displayFormat>
        <label>Packaging Trial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packaging Trials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>