force-app/main/default/objects/Packaging_Trial__c/fields/Approved_Rejected_by__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_by__c</fullName>
    <label>Approved / Rejected by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>