force-app/main/default/objects/Packaging_Trial__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Packaging Trials</relationshipLabel>
    <relationshipName>Packaging_Trials</relationshipName>
    <type>Lookup</type>
</CustomField>