force-app/main/default/objects/Packaging_Trial__c/fields/Customer_Filling_Site__c.field-meta.xml
<CustomField>
    <fullName>Customer_Filling_Site__c</fullName>
    <inlineHelpText>Where is the stock being delivered to?</inlineHelpText>
    <label>Customer Filling Site</label>
    <length>50</length>
    <type>Text</type>
</CustomField>