force-app/main/default/objects/Packaging_Trial__c/fields/Date_Approved_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_Rejected__c</fullName>
    <label>Date Approved / Rejected</label>
    <type>Date</type>
</CustomField>