force-app/main/default/objects/Packaging_Trial__c/fields/Date_Sent_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_for_Approval__c</fullName>
    <label>Date Sent for Approval</label>
    <type>Date</type>
</CustomField>