force-app/main/default/objects/Packaging_Trial__c/fields/Drawing__c.field-meta.xml
<CustomField>
    <fullName>Drawing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup the packing drawing</inlineHelpText>
    <label>Model &amp; Material</label>
    <referenceTo>Drawing__c</referenceTo>
    <relationshipLabel>Packaging Trials</relationshipLabel>
    <relationshipName>Packaging_Trials</relationshipName>
    <type>Lookup</type>
</CustomField>