force-app/main/default/objects/Packaging_Trial__c/fields/Is_it_Trial_or_Change_in_Production__c.field-meta.xml
<CustomField>
    <fullName>Is_it_Trial_or_Change_in_Production__c</fullName>
    <label>Is it Trial or Change in Production</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Change in Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>