force-app/main/default/objects/Packaging_Trial__c/fields/Reason_for_trial__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_trial__c</fullName>
    <label>Reason for trial</label>
    <type>TextArea</type>
</CustomField>