force-app/main/default/objects/Packaging_Trial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Drawing__c</columns>
    <columns>Approved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>